revno: 3868 [merge] message:   Squashed characters (s) fixed.
committer: Jan Henrik Overland <janhenrik.overland@gmail.com>
branch nick: dhis2
timestamp: Fri 2011-06-10 18:27:17 +0200

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/light_blue/light_blue.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/light_blue/light_blue.css
@@ -389,6 +389,7 @@ div#menuDropDown3
   border-width: 1px;
   border-color: #c8dbea;
   font-family: LiberationSansBold, arial;
+  font-size: 13px;
   font-weight: normal;
 }
 
@@ -467,6 +468,7 @@ div#menuDropDown3
 {
   font-family: LiberationSansBold, arial;
   color: #3c533c;
+  font-size: 13px;
 }
 
 /*----------------------------------------------------------------------------*/
